adjusted input fonts to avoid zooming on mobile, and added a bit more margin in home page, a bit less in registration

--- a/src/components/navigation/appnav.scss
+++ b/src/components/navigation/appnav.scss
@@ -29,7 +29,7 @@ header {
 
 // MOBILE-Navigation
 .mobile-nav-button {
-  width: 3.5rem;
+  width: 4rem;
   height: 3.5rem;
   border: none;
   background: transparent;
