--- a/src/components/recipesView/searchBar/searchbar.scss
+++ b/src/components/recipesView/searchBar/searchbar.scss
@@ -10,6 +10,7 @@
   select,
   input {
     @include input-style;
+    font-size: 1rem;
   }
 
   button {
