--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,5 +1,5 @@
 .main-content {
-  margin: 1rem auto;
+  margin: 2rem auto 4rem;
   padding: 0 1rem;
   max-width: 750px;
 
