--- a/src/style/login.scss
+++ b/src/style/login.scss
@@ -30,6 +30,7 @@
 
   input {
     @include input-style;
+    font-size: 1rem;
   }
 }
 
