--- a/src/style/register.scss
+++ b/src/style/register.scss
@@ -4,7 +4,7 @@
   display: grid;
   row-gap: 0.5rem;
   max-width: 480px;
-  margin: 1rem auto;
+  margin: 0 auto 2rem;
   padding: 1rem;
 
   h4 {
@@ -13,6 +13,7 @@
 
   input {
     @include input-style;
+    font-size: 1rem;
   }
 
   button {
